/*
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package vaccel;

message CreateSharedObjRequest {
	bytes shared_obj = 1;
}

message CreateSingleModelRequest {
	bytes file = 1;
}

message CreateTensorflowSavedModelRequest {
	bytes model_pb = 1;
	bytes checkpoint = 2;
	bytes var_index = 3;
}

message CreateCaffeModelRequest {
	bytes prototxt = 1;
	bytes binary_model = 2;
	bytes labels = 3;
}

message CreateResourceRequest {
	oneof resource {
		CreateSharedObjRequest shared_obj = 1;
		CreateSingleModelRequest single_model = 2;
		CreateTensorflowSavedModelRequest tf_saved_model = 3;
		CreateCaffeModelRequest caffe_model = 4;
	}
}

message CreateResourceResponse {
	int64 resource_id = 1;
}

message RegisterResourceRequest {
	int64 resource_id = 1;
	uint32 session_id = 2;
}

message UnregisterResourceRequest {
	uint32 session_id = 1;
	int64 resource_id = 2;
}

message DestroyResourceRequest {
	int64 resource_id = 1;
}
