// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package vaccel;

import "error.proto";

enum TorchDataType {
	// Add unused value here so that we are compatible
	// with what vAccelRT returns us
	UNUSED = 0;
	BYTE = 1;
	CHAR = 2;
	SHORT = 3;
	INT = 4;
	LONG = 5;
	HALF = 6;
	FLOAT = 7;
}

message TorchTensor {
	// Data of the tensor
	bytes data = 1;

	// Dimensions of the tensor
	repeated int64 dims = 2;

	// Data type
	TorchDataType type = 3;
}

// Load_model
message TorchModelLoadRequest {
	int64 session_id = 1;
	int64 model_id = 2;
}

// Model_run
message TorchModelRunRequest {
	int64 session_id = 1;
	int64 model_id = 2;

	// Run options
	optional bytes run_options = 3;

	// Input tensors
	repeated TorchTensor in_tensors = 4;

	// Number of output tensors
	uint64 nr_out_tensors = 5;
}

message TorchModelRunResponse {
	// An inference result is a number of output tensors
	repeated TorchTensor out_tensors = 1;
}
